<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Whatodo</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="profile_view_places_header">Lieux favoris</string>
    <string name="profile_view_interests_header">Centres d\'intérêt</string>
    <string name="profile_view_your_events_header">Vos évènements favoris</string>
    <string name="action_earth">Vue Carte</string>
    <string name="action_list">Vue Liste</string>
    <string name="action_refresh">Rafraîchir</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connection">Pas de connexion internet</string>
    <string name="no_image">Pas d\'image disponible</string>
    <string name="principal_view">Vue principale</string>
    <string name="download">Téléchargement des événements</string>
    <string name="parse">Traitement des événements</string>
    <string name="download_failed_txt">Aucun événement disponible</string>
    <string name="download_failed_btn">Réessayer</string>
    <string name="download_profile">Récupération des données du profil</string>
    <string name="event_details_transition">details_transition</string>
    <string name="categories">Catégories</string>
    <string name="tags">Tags</string>
    <string name="place">Lieu</string>
    <string name="distance">Distance</string>
    <string name="price">Prix</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="hours">Horaires</string>
    <string name="action_filters">Filtres</string>
    <string name="max_date_before_min_date">La date de fin doit être après la date de début</string>
    <string name="max_hour_before_min_hour">L\'heure de fin doit être après l\'heure de début</string>
    <string name="location_issue">Difficultés pour localiser l\'appareil</string>
    <string name="location_not_available">Service de localisation non disponible</string>
    <string name="filters_drawer_close">Fermer les filtres</string>
    <string name="filters_open">Ouvrir les filtres</string>
    <string name="username">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="login">Mon Profil</string>
    <string name="no_login">Identifiants incorrects</string>
    <string name="login_ok">Connexion réussie</string>
    <string name="no_user">Aucune information</string>
    <string name="create_event">Créer événement</string>
    <string name="select_image">Sélectionner image</string>
    <string name="no_creation">Evénement non créé, vérifiez les informations fournies.</string>
    <string name="favorites">Ajouter aux favoris</string>
    <string name="event_added">Evénement ajouté à vos favoris</string>
    <string name="event_no_added">Erreur lors de l\'ajout de l\'événement</string>

    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="url">URL</string>
    <string name="image">Image</string>
    <string name="time_begin">Heure début</string>
    <string name="time_end">Heure fin</string>
    <string name="date_begin">Date début</string>
    <string name="date_end">Date fin</string>
    <string name="min_age">Age minimum</string>
    <string name="address">Adresse</string>
    <string name="city">Ville</string>
</resources>
