<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/username"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignStart="@+id/password_text" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/username_text"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/password_text"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/password_text"
        android:layout_toRightOf="@id/password_text"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text="@string/login" />
</RelativeLayout>